# hydra

./: .gitignore  .pre-commit-config.yaml  .prek.toml  CLAUDE.md  Cargo.toml  README.md  hydra.sh  prompt.md  test-terminal-fix.sh
.claude/skills/bbi/: SKILL.md
.claude/skills/local-dev-guide/: SKILL.md
debug/: parallel-tasks-test.md
debug/output/: alpha.txt  beta.txt  combined.txt  farewell.txt  gamma.txt  greeting.txt  manifest.txt  status.txt
debug/parallel-plans-test/: .hydra-parallel-progress  plan-a.md  plan-b.md  plan-c.md
plans/: cli-plan-injection.md  fix-utf8-string-slicing.md  headless-mode.md  hydra-v2.md  parallel-execution.md  parallel-progress-tracking.md  parallel-tasks-skill.md  skill-setup.md  tui-mode.md  tui-pty-resize.md  tui-vt100-output.md
plans/test-parallel/: echo-hello.md  intentional-fail.md  list-specs.md  read-cargo.md  run-tests.sh
specs/: headless-mode.md  hydra.md  index.md  parallel-execution.md  pi-harness.md  skill-setup.md  tui-mode.md
src/: cli.rs  config.rs  error.rs  harness.rs  headless.rs  main.rs  plan.rs  prompt.rs  pty.rs  runner.rs  signal.rs  skill.rs
src/scripts/: runner.sh
src/tui/: app.rs  input.rs  mod.rs  ui.rs
templates/: default-prompt.md  iteration-instructions.md
templates/skill-prompts/: deploy-and-check.md  dev-skills.md  local-dev-guide.md  permissions.md  precommit.md
