[package]
name = "hydra"
version = "0.5.10"
edition = "2024"
description = "Automated Claude Code task runner"
authors = ["Antonio Esquembre"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
chrono = "0.4"
tempfile = "3"
thiserror = "2"
ctrlc = { version = "3", features = ["termination"] }
nix = { version = "0.29", features = ["signal", "process"] }
portable-pty = "0.8"
crossterm = "0.28"
strip-ansi-escapes = "0.2"
